trunk/chitra_lancom/BlockParser.java
// $ANTLR 3.0.1 /home/sambuddho/plt_project/chitra_lancom/Block.g 2008-04-22 01:04:38

	//import javalancom.Scope;
	//import javalancom.Symbol;
	import java.util.HashMap;
	import java.util.Set;
	import java.util.Iterator;
	import java.util.Map;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class BlockParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "DIV", "PROG_BEGIN", "PROG_END", "SEMICOLON", "IF", "ELSE", "ENDIF", "WHILE", "ENDWHILE", "ECHO", "STRING", "IFCONFIG", "APPLY", "TOPOLOGY", "UNDO", "ROLE", "POLICY", "HOST_GROUP", "SERV_GROUP", "ROUTE", "ADD", "DELETE", "TO", "FROM", "SHOW", "NUMERIC", "FW", "QUES", "COLON", "LOG_OR", "LOG_AND", "BITWISE_OR", "BITWISE_AND", "EQUAL_TO", "NOT_EQUAL_TO", "LT", "GT", "LE", "GE", "BITWISE_NEGATE", "ID", "ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", "ADD_ASSIGN", "MINUS_ASSIGN", "COMMA", "TOPOLOGY_TYPE_NAME", "HOST_TYPE_NAME", "HOST_GROUP_TYPE_NAME", "SERVICE_GROUP_TYPE_NAME", "ROLE_GROUP_TYPE_NAME", "POLICY_TYPE_NAME", "ROUTE_TYPE_NAME", "INTERFACE_TYPE_NAME", "IP_ADDR_TYPE_NAME", "INT_TYPE_NAME", "CHAR_TYPE_NAME", "NETMASK", "NUMBER", "CHAR", "DIR_INBOUND", "DIR_OUTBOUND", "VERD_ALLOW", "VERD_DENY", "PROTO_UDP", "PROTO_TCP", "ICMP_MESSAGE_TYPE", "IFNAME", "CARD_ID", "DOT", "IPADDR", "DNS", "GATEWAY", "HOST", "GW", "NET", "SERV_SET", "LETTER", "DIGIT", "EscapeSequence", "LINE_COMMENT", "EQUAL", "WHITESPACE", "ALL", "'('", "')'", "'{'", "'}'"
    };
    public static final int LT=42;
    public static final int ROUTE=26;
    public static final int WHILE=14;
    public static final int ROUTE_TYPE_NAME=60;
    public static final int LETTER=85;
    public static final int CHAR=67;
    public static final int UNDO=21;
    public static final int EOF=-1;
    public static final int DIV_ASSIGN=50;
    public static final int SERV_SET=84;
    public static final int DIR_INBOUND=68;
    public static final int IFNAME=75;
    public static final int IPADDR=78;
    public static final int ENDIF=13;
    public static final int TOPOLOGY=20;
    public static final int CARD_ID=76;
    public static final int ENDWHILE=15;
    public static final int HOST_GROUP_TYPE_NAME=56;
    public static final int SHOW=31;
    public static final int QUES=34;
    public static final int GE=45;
    public static final int ROLE=22;
    public static final int LINE_COMMENT=88;
    public static final int ADD_ASSIGN=51;
    public static final int FW=33;
    public static final int ELSE=12;
    public static final int MINUS_ASSIGN=52;
    public static final int NUMBER=66;
    public static final int VERD_ALLOW=70;
    public static final int WHITESPACE=90;
    public static final int SEMICOLON=10;
    public static final int DELETE=28;
    public static final int NUMERIC=32;
    public static final int MULT=6;
    public static final int INTERFACE_TYPE_NAME=61;
    public static final int EQUAL_TO=40;
    public static final int NOT_EQUAL_TO=41;
    public static final int GATEWAY=80;
    public static final int GW=82;
    public static final int POLICY_TYPE_NAME=59;
    public static final int VERD_DENY=71;
    public static final int GT=43;
    public static final int PROG_END=9;
    public static final int POLICY=23;
    public static final int FROM=30;
    public static final int EscapeSequence=87;
    public static final int ICMP_MESSAGE_TYPE=74;
    public static final int BITWISE_AND=39;
    public static final int APPLY=19;
    public static final int MULT_ASSIGN=49;
    public static final int IP_ADDR_TYPE_NAME=62;
    public static final int HOST=81;
    public static final int HOST_TYPE_NAME=55;
    public static final int BITWISE_OR=38;
    public static final int ID=47;
    public static final int DNS=79;
    public static final int IF=11;
    public static final int BITWISE_NEGATE=46;
    public static final int SERVICE_GROUP_TYPE_NAME=57;
    public static final int COMMA=53;
    public static final int ROLE_GROUP_TYPE_NAME=58;
    public static final int EQUAL=89;
    public static final int ALL=91;
    public static final int PLUS=4;
    public static final int LOG_OR=36;
    public static final int DIGIT=86;
    public static final int DOT=77;
    public static final int LOG_AND=37;
    public static final int HOST_GROUP=24;
    public static final int ADD=27;
    public static final int CHAR_TYPE_NAME=64;
    public static final int NETMASK=65;
    public static final int TO=29;
    public static final int SERV_GROUP=25;
    public static final int PROTO_TCP=73;
    public static final int INT_TYPE_NAME=63;
    public static final int MINUS=5;
    public static final int COLON=35;
    public static final int ECHO=16;
    public static final int NET=83;
    public static final int IFCONFIG=18;
    public static final int TOPOLOGY_TYPE_NAME=54;
    public static final int DIR_OUTBOUND=69;
    public static final int ASSIGN=48;
    public static final int PROG_BEGIN=8;
    public static final int DIV=7;
    public static final int LE=44;
    public static final int STRING=17;
    public static final int PROTO_UDP=72;

        public BlockParser(TokenStream input) {
            super(input);
        }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/sambuddho/plt_project/chitra_lancom/Block.g"; }


    	Scope globalScope = new Scope(null);
    	Scope currentScope = globalScope;
    	Map<String, Assignment> map = new HashMap<String, Assignment>(); 

        	public static void main(String[] args) throws Exception 
        	{
            	BlockLexer lex = new BlockLexer(new ANTLRFileStream(args[0]));
    	       	CommonTokenStream tokens = new CommonTokenStream(lex);

            	BlockParser parser = new BlockParser(tokens);

    	        try 
    	        {
    	            parser.role();
            	} 
            	catch (RecognitionException e)  
            	{
    	            e.printStackTrace();
            	}
        	}



    // $ANTLR start prog
    // /home/sambuddho/plt_project/chitra_lancom/Block.g:133:1: prog : PROG_BEGIN ( statement_list )+ PROG_END ;
    public final void prog() throws RecognitionException {
        try {
            // /home/sambuddho/plt_project/chitra_lancom/Block.g:134:2: ( PROG_BEGIN ( statement_list )+ PROG_END )
            // /home/sambuddho/plt_project/chitra_lancom/Block.g:134:4: PROG_BEGIN ( statement_list )+ PROG_END
            {
            match(input,PROG_BEGIN,FOLLOW_PROG_BEGIN_in_prog73); 
            // /home/sambuddho/plt_project/chitra_lancom/Block.g:134:15: ( statement_list )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=SEMICOLON && LA1_0<=IF)||LA1_0==WHILE||(LA1_0>=ECHO && LA1_0<=APPLY)||LA1_0==UNDO||LA1_0==HOST_GROUP||(LA1_0>=ROUTE && LA1_0<=DELETE)||LA1_0==FW||(LA1_0>=BITWISE_NEGATE && LA1_0<=ID)||(LA1_0>=TOPOLOGY_TYPE_NAME && LA1_0<=CHAR_TYPE_NAME)||(LA1_0>=NUMBER && LA1_0<=DIR_OUTBOUND)||LA1_0==IFNAME||LA1_0==IPADDR||LA1_0==HOST||(LA1_0>=NET && LA1_0<=SERV_SET)||LA1_0==92) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/sambuddho/plt_project/chitra_lancom/Block.g:134:15: statement_list
            	    {
            	    pushFollow(FOLLOW_statement_list_in_prog75);
            	    statement_list();
            	    _fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            match(input,PROG_END,FOLLOW_PROG_END_in_prog78); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end prog


    // $ANTLR start statement_list
    // /home/sambuddho/plt_project/chitra_lancom/Block.g:136:2: statement_list : ( statement | declr_stmt );
    public final void statement_list() throws RecognitionException {
        try {
            // /home/sambuddho/plt_project/chitra_lancom/Block.g:136:18: ( statement | declr_stmt )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=SEMICOLON && LA2_0<=IF)||LA2_0==WHILE||(LA2_0>=ECHO && LA2_0<=APPLY)||LA2_0==UNDO||LA2_0==HOST_GROUP||(LA2_0>=ROUTE && LA2_0<=DELETE)||LA2_0==FW||(LA2_0>=BITWISE_NEGATE && LA2_0<=ID)||(LA2_0>=NUMBER && LA2_0<=DIR_OUTBOUND)||LA2_0==IFNAME||LA2_0==IPADDR||LA2_0==HOST||(LA2_0>=NET && LA2_0<=SERV_SET)||LA2_0==92) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=TOPOLOGY_TYPE_NAME && LA2_0<=CHAR_TYPE_NAME)) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("136:2: statement_list : ( statement | declr_stmt );", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /home/sambuddho/plt_project/chitra_lancom/Block.g:136:20: statement
                    {
                    pushFollow(FOLLOW_statement_in_statement_list90);
                    statement();
                    _fsp--;


                    }
                    break;
                case 2 :
                    // /home/sambuddho/plt_project/chitra_lancom/Block.g:137:6: declr_stmt
                    {
                    pushFollow(FOLLOW_declr_stmt_in_statement_list97);
                    declr_stmt();
                    _fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end statement_list


    // $ANTLR start statement
    // /home/sambuddho/plt_project/chitra_lancom/Block.g:140:2: statement : ( condition_statement | iteration_statement | statement_expr | print_statement );
    public final void statement() throws RecognitionException {
        try {
            // /home/sambuddho/plt_project/chitra_lancom/Block.g:141:3: ( condition_statement | iteration_statement | statement_expr | print_statement )
            int alt3=4;
            switch ( input.LA(1) ) {
            case IF:
                {
                alt3=1;
                }
                break;
            case WHILE:
                {
                alt3=2;
                }
                break;
            case SEMICOLON:
            case STRING:
            case IFCONFIG:
            case APPLY:
            case UNDO:
            case HOST_GROUP:
            case ROUTE:
            case ADD:
            case DELETE:
            case FW:
            case BITWISE_NEGATE:
            case ID:
            case NUMBER:
            case CHAR:
            case DIR_INBOUND:
            case DIR_OUTBOUND:
            case IFNAME:
            case IPADDR:
            case HOST:
            case NET:
            case SERV_SET:
            case 92:
                {
                alt3=3;
                }
                break;
            case ECHO:
                {
                alt3=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("140:2: statement : ( condition_statement | iteration_statement | statement_expr | print_statement );", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // /home/sambuddho/plt_project/chitra_lancom/Block.g:141:5: condition_statement
                    {
                    pushFollow(FOLLOW_condition_statement_in_statement112);
                    condition_statement();
                    _fsp--;


                    }
                    break;
                case 2 :
                    // /home/sambuddho/plt_project/chitra_lancom/Block.g:142:5: iteration_statement
                    {
                    pushFollow(FOLLOW_iteration_statement_in_statement118);
                    iteration_statement();
                    _fsp--;


                    }
                    break;
                case 3 :
                    // /home/sambuddho/plt_project/chitra_lancom/Block.g:143:5: statement_expr
                    {
                    pushFollow(FOLLOW_statement_expr_in_statement124);
                    statement_expr();
                    _fsp--;


                    }
                    break;
                case 4 :
                    // /home/sambuddho/plt_project/chitra_lancom/Block.g:144:5: print_statement
                    {
                    pushFollow(FOLLOW_print_statement_in_statement130);
                    print_statement();
                    _fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end statement


    // $ANTLR start statement_expr
    // /home/sambuddho/plt_project/chitra_lancom/Block.g:147:2: statement_expr : ( SEMICOLON | expression SEMICOLON );
    public final void statement_expr() throws RecognitionException {
        try {
            // /home/sambuddho/plt_project/chitra_lancom/Block.g:148:3: ( SEMICOLON | expression SEMICOLON )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==SEMICOLON) ) {
                alt4=1;
            }
            else if ( ((LA4_0>=STRING && LA4_0<=APPLY)||LA4_0==UNDO||LA4_0==HOST_GROUP||(LA4_0>=ROUTE && LA4_0<=DELETE)||LA4_0==FW||(LA4_0>=BITWISE_NEGATE && LA4_0<=ID)||(LA4_0>=NUMBER && LA4_0<=DIR_OUTBOUND)||LA4_0==IFNAME||LA4_0==IPADDR||LA4_0==HOST||(LA4_0>=NET && LA4_0<=SERV_SET)||LA4_0==92) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("147:2: statement_expr : ( SEMICOLON | expression SEMICOLON );", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /home/sambuddho/plt_project/chitra_lancom/Block.g:148:5: SEMICOLON
                    {
                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_statement_expr146); 

                    }
                    break;
                case 2 :
                    // /home/sambuddho/plt_project/chitra_lancom/Block.g:149:5: expression SEMICOLON
                    {
                    pushFollow(FOLLOW_expression_in_statement_expr153);
                    expression();
                    _fsp--;

                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_statement_expr155); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end statement_expr


    // $ANTLR start condition_statement
    // /home/sambuddho/plt_project/chitra_lancom/Block.g:152:2: condition_statement : IF '(' equality_expr ')' statement_list ( ELSE statement_list )? ENDIF ;
    public final void condition_statement() throws RecognitionException {
        try {
            // /home/sambuddho/plt_project/chitra_lancom/Block.g:153:3: ( IF '(' equality_expr ')' statement_list ( ELSE statement_list )? ENDIF )
            // /home/sambuddho/plt_project/chitra_lancom/Block.g:153:5: IF '(' equality_expr ')' statement_list ( ELSE statement_list )? ENDIF
            {
            match(input,IF,FOLLOW_IF_in_condition_statement171); 
            match(input,92,FOLLOW_92_in_condition_statement173); 
            pushFollow(FOLLOW_equality_expr_in_condition_statement175);
            equality_expr();
            _fsp--;

            match(input,93,FOLLOW_93_in_condition_statement177); 
            pushFollow(FOLLOW_statement_list_in_condition_statement179);
            statement_list();
            _fsp--;

            // /home/sambuddho/plt_project/chitra_lancom/Block.g:153:45: ( ELSE statement_list )?
            int alt5=2;
            int LA5_0 = input.LA(1);
